# kNN-CUDA

./: CMakeLists.txt  Makefile  README.md  build.sh
code/: CMakeLists.txt  Makefile  clean.sh
code/kNN-CUDA/: CMakeLists.txt  build.sh
src/: CMakeLists.txt  knncuda.cu
test/: CMakeLists.txt  run.sh  test.cpp
